# Smart-contracts

./: .gitignore  Cargo.toml  Makefile  README.md
.atl/: .skill-registry.cache.json  skill-registry.md
.engram/: config.json
.github/workflows/: smart-contracts-ci.yml
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: contract.rs  lib.rs  tests.rs
contracts/marketplace/src/privacy/: mod.rs  types.rs
contracts/marketplace/src/storage/: types.rs
contracts/tokens/: Cargo.toml
contracts/tokens/src/: contract.rs  events.rs  lib.rs  tests.rs
contracts/tokens/src/core/: token.rs
contracts/tokens/src/storage/: types.rs
crates/access-prover/: Cargo.toml
crates/access-prover/cli/: main.rs
crates/access-prover/examples/: generate_session.rs
crates/access-prover/src/: lib.rs  proof.rs  types.rs
crates/access-prover/src/circuit/: mod.rs
openspec/: config.yaml
scripts/: deploy-mainnet.sh  integration-test.sh  verify-mainnet.sh
